[package]
name = "rproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arti = "0.4.0"
arti-client = "0.4.0"
clap = "3.1.18"
console-subscriber = "0.1.6"
futures = "0.3.21"
hyper = { version = "0.14.19", features = ["full"] }
tokio = { version = "1.19.2", features = ["full", "tracing"] }
